Fixed codacy issues